--- a/static/style.css
+++ b/static/style.css
@@ -1,24 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-
 :root {
   --font-family: 'Josefin Sans', sans-serif;
   --transition: 1s ease;
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: var(--font-family);
 }
-
 .dark-mode {
   background-color: black;
   color: white;
 }
-
 body {
   width: 85%;
+  font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -27,29 +24,29 @@ body {
   padding: 10px 20px;
   transition: var(--transition);
 }
-
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px auto;
-  padding: 10px 0;
-  width: 95%;
+  padding: 10px;
+  width: 90%;
 }
-
 header .theme-modes {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  column-gap: 5px;
-  width: 15%;
+  gap: 10px;
+  width: 10%;
   z-index: 5;
   cursor: pointer;
   transition: var(--transition);
 }
-
 header .theme-modes p {
   font-size: 10px;
+  color: black;
+  border-radius: 10px;
+  padding: 3px 0;
   display: none;
   transition: var(--transition);
 }
@@ -59,7 +56,6 @@ header .theme-modes:hover p {
 body.dark-mode .theme-modes:hover p {
   color: white;
 }
-
 header .theme-modes .sunny {
   display: none;
 }
@@ -69,11 +65,10 @@ header .theme-modes.active .sunny {
 header .theme-modes.active .moon {
   display: none;
 }
-
 .container {
-  width: 95%;
+  width: 90%;
   margin: 20px auto;
-  padding: 30px 15px;
+  padding: 30px;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   display: flex;
@@ -85,13 +80,11 @@ header .theme-modes.active .moon {
 .container.dark-mode {
   box-shadow: 0 0 20px rgb(255, 255, 255);
 }
-
 .container .upper {
-  width: 95%;
+  width: 85%;
   display: grid;
   place-items: center;
 }
-
 .container form {
   width: 100%;
   height: 100%;
@@ -99,21 +92,18 @@ header .theme-modes.active .moon {
   align-items: center;
   justify-content: space-between;
 }
-
 .container form .left {
   width: 70%;
 }
-
 .container form .left textarea {
   width: 100%;
   padding: 10px;
-  font-size: 24px;
+  font-size: 20px;
   border: 1px solid black;
   border-radius: 10px;
   outline: none;
   resize: none;
 }
-
 .container form .right {
   height: 90%;
   display: flex;
@@ -121,28 +111,24 @@ header .theme-modes.active .moon {
   justify-content: space-between;
   flex-direction: column;
 }
-
 .container form .right select {
   padding: 4px 8px;
-  font-size: 18px;
-  margin-top: 5px;
+  font-size: 20px;
 }
-
 .container form .right input {
   width: 100%;
   padding: 5px 15px;
   border-radius: 10px;
   border: none;
-  background-color: black;
+  background-color: #007bff;
   color: white;
-  font-size: 18px;
+  font-size: 20px;
   cursor: pointer;
 }
 .container.dark-mode form .right input {
-  background-color: white;
-  color: black;
+  background-color: #007bff;
+  color: white;
 }
-
 .line {
   width: 80%;
   background-color: black;
@@ -152,33 +138,48 @@ header .theme-modes.active .moon {
 body.dark-mode .line {
   background-color: white;
 }
-
 .container .lower {
-  /* max-width: 90%; */
+    /* max-width: 95% */
   width: 95%;
   overflow-x: auto;
 }
-
 .container .lower pre {
   width: 100%;
   line-height: 1.2;
   white-space: pre;
   word-wrap: break-word;
   font-family: monospace;
+  word-spacing: normal;
+  word-break: normal;
 }
-
 footer {
   position: fixed;
   bottom: 20px;
   left: 20px;
   margin: 20px auto 0;
+  display: grid;
+  gap: 20px;
+  font-size: 25px;
 }
-
 footer a {
   color: black;
   cursor: pointer;
-  transition: var(--transition);
 }
 body.dark-mode footer a {
   color: white;
+}
+@media only screen and (min-width: 768px) and (max-width: 925px){
+    body {
+        width: 100%;
+    }
+    .container {
+        width: 90%;
+        padding: 30px 10px;
+    }
+    .container .upper {
+        width: 95%;
+    }
+    .container .lower {
+        max-width: 95%;
+    }
 }
