Fix: Change the select message.

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="right">
             <div>
-              <h4>Select banner file:</h4>
+              <h4>Select banner:</h4>
               <select name="banner" id="bannerSelect">
                 <option value="standard">Standard</option>
                 <option value="shadow">Shadow</option>
@@ -46,9 +46,9 @@
       </div>
       <div class="line"></div>
       <div class="lower">
-        {{if .AsciiArt}}
+        <!-- {{if .AsciiArt}} -->
         <pre>{{.AsciiArt}}</pre>
-        {{end}}
+        <!-- {{end}} -->
       </div>
     </div>
     <footer>
