Fix: Change the select message.

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,9 +46,9 @@
       </div>
       <div class="line"></div>
       <div class="lower">
-        <!-- {{if .AsciiArt}} -->
+        {{if .AsciiArt}}
         <pre>{{.AsciiArt}}</pre>
-        <!-- {{end}} -->
+        {{end}}
       </div>
     </div>
     <footer>
