--- a/static/style.css
+++ b/static/style.css
@@ -33,7 +33,23 @@ body {
   margin: 0 auto;
   padding: 10px 20px;
   transition: var(--transition);
+  /*
+  background-image: url('/img/background.jpeg');
+  background-size: cover;
+  */
 }
+/*
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(134, 134, 134, 0.7);
+  z-index: -1;
+}
+*/
 header {
   width: 90%;
   margin-bottom: 20px auto;
@@ -78,6 +94,7 @@ header .theme-modes.active .moon {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   flex-direction: column;
   transition: var(--transition);
+  background: transparent;
 }
 .container.dark-mode {
   box-shadow: 0 0 20px rgb(255, 255, 255);
@@ -238,10 +255,10 @@ body.dark-mode footer a {
   footer {
     display: none;
   }
-} 
+}
 @media only screen and (max-width: 599px) {
   .container {
     width: 100%;
     padding: 30px 15px;
   }
-} 
+}
