--- a/templates/page500.html
+++ b/templates/page500.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="status.css" />
+    <link rel="stylesheet" href="/static/status.css" />
 
     <title>500</title>
   </head>
@@ -12,7 +12,7 @@
     <div class="container">
       <h1>500</h1>
       <p>An Unexpected Error Occurred. Try Again Later</p>
-      <a href="index.html">Go Back</a>
+      <a href="/">Go Back</a>
     </div>
   </body>
 </html>
