Fix: Remove static file name used to name the downloaded file.

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,11 +57,7 @@
 
       <div class="download">
         {{if .AsciiArt}}
-        <a
-          href="/download?ascii={{urlquery .AsciiArt}}"
-          download="ascii-art.txt"
-          >Download Art</a
-        >
+        <a href="/download?ascii={{urlquery .AsciiArt}}">Download Art</a>
         {{end}}
       </div>
     </div>
